--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -12,12 +12,12 @@
 
     <div class="container">
         <div class="line-one">
-            <div class="btn green" type="button">green</div>
-            <div class="btn red" type="button">red</div>
+            <div class="btn green" type="button"></div>
+            <div class="btn red" type="button"></div>
         </div>
         <div class="line-two">
-            <div class="btn orange" type="button">orange</div>
-            <div class="btn purple" type="button">purple</div>
+            <div class="btn orange" type="button"></div>
+            <div class="btn purple" type="button"></div>
         </div>
     </div>
     
